Add the header navigator and tag page

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,1 +1,9 @@
 main:
+  - title: "Archive"
+    url: "/archive"
+  - title: "Category"
+    url: "/category"
+  - title: "Tags"
+    url: "/tags"
+  - title: "About"
+    url: "/about"
